--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div id="video-layer" class="layer">
         <video id="main-video" playsinline>
-            <source src="video.mp4" type="video/mp4">
+            <source src="unbuk teaser.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
