--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div id="intro-layer" class="layer active">
         <div class="intro-content">
-            <p id="enter-text" class="blink">CLICK TO ENTER</p>
+            <p id="enter-text" class="blink">Unlock Your Invitation</p>
         </div>
     </div>
 
