--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <div id="outro-layer" class="layer">
         <div class="outro-content">
             <h1 class="main-title">
-                <span class="line">Another holiday,</span>
-                <span class="line">Unbuk returns.</span>
+                <span class="line">Unbuk: Our Shared Legacy will return.</span>
+                <span class="line">우리만의 명절, 운북이 돌아옵니다.</span>
             </h1>
             <div id="countdown" class="countdown-container">
                 <div class="time-unit">
