--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UNBUK Invitation</title>
+    <title>UNBUK</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
 
     <div id="intro-layer" class="layer active">
         <div class="intro-content">
-            <p id="enter-text" class="blink">UNLOCK YOUR INVITATION</p>
+            <p id="enter-text" class="blink">ACCEPT THE INVITATION</p>
         </div>
     </div>
 
